--- a/Planets/Earth.html
+++ b/Planets/Earth.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth</title>
+    <link rel="stylesheet" href="../PlanetsCss/Earth.css">
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Earth</h1>
+    <div class="Earth">
+        <section>
+            <div class="MercuryContext">
+                <h1>Earth</h1>
+                <p>Earth—our home planet—is the only place we know of so far that’s inhabited by living things. 
+                    It's also the only planet in our solar system with liquid water on the surface. Lo</p>
+            </div>
+            <img src="../Images/Earth.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>93 423 528 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>8.358596 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>365 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Terrestrial</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
