--- a/Planets/Mars.html
+++ b/Planets/Mars.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mars</title>
+    <link rel="stylesheet" href="../PlanetsCss/Mars.css">
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Mars</h1>
+    <div class="Mars">
+        <section>
+            <div class="MercuryContext">
+                <h1>Mars</h1>
+                <p>Mars is a dusty, cold, desert world with a very thin atmosphere. There is strong evidence Mars was – billions of years ago – wetter and warmer, with a thicker atmosphere.</p>
+            </div>
+            <img src="../Images/Mars.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>154 176 219 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>13.794135 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>687 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Terrestrial</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
