--- a/Planets/Mercury.html
+++ b/Planets/Mercury.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../PlanetsCss/Mercury.css">
     <title>Mercury</title>
 </head>
 <body>
-    <h1>Mercury</h1>
+    <div class="Mercury">
+        <section>
+            <div class="MercuryContext">
+                <h1>Mercury</h1>
+                <p>From the surface of Mercury, 
+                the Sun would appear more than three times as large as it does when viewed from Earth,
+                and the sunlight would be as much as 11 times brighter.</p>
+            </div>
+            <img src="../Images/Mercury.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>37 220 418 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>3.330126 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>88 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Terrestrial</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
