--- a/Planets/Neptune.html
+++ b/Planets/Neptune.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neptune</title>
+    <link rel="stylesheet" href="../PlanetsCss/Neptune.css">
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Neptune</h1>
+    <div class="Neptune">
+        <section>
+            <div class="MercuryContext">
+                <h1>Neptune</h1>
+                <p>Neptune—the eighth and most distant major planet orbiting our Sun—is dark, cold and whipped by supersonic winds. It was the first planet located through mathematical calculations.
+                </p>
+            </div>
+            <img src="../Images/Neptune.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>2 780 302 617 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>248.753463 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>60,190 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Ice Giant</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
