--- a/Planets/Uranus.html
+++ b/Planets/Uranus.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uranus</title>
+    <link rel="stylesheet" href="../PlanetsCss/Uranus.css">
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Uranus</h1>
+    <div class="Uranus">
+        <section>
+            <div class="MercuryContext">
+                <h1>Uranus</h1>
+                <p>Uranus—seventh planet from the Sun—rotates at a nearly 90-degree angle from the plane of its orbit. This unique tilt makes Uranus appear to spin on its side.
+                </p>
+            </div>
+            <img src="../Images/Uranus.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>1 916 490 729 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>163.449280 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>30,687 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Ice Giant</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
