--- a/Planets/Yupiter.html
+++ b/Planets/Yupiter.html
@@ -5,9 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../PlanetsCss/Yupiter.css">
-    <title>Yupiter</title>
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Yupiter</h1>
+    <div class="Jupiter">
+        <section>
+            <div class="MercuryContext">
+                <h1>Jupiter</h1>
+                <p>Jupiter is more than twice as massive than the other planets of our solar system combined. The giant planet's Great Red Spot is a centuries-old storm bigger than Earth.</p>
+            </div>
+            <img src="../Images/Jupiter.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>460 453 490 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>41.97541967399 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>4,333 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Gas Giant</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
