--- a/Planets/Venus.html
+++ b/Planets/Venus.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venus</title>
+    <link rel="stylesheet" href="../PlanetsCss/Venus.css">
+    <title>Mercury</title>
 </head>
 <body>
-    <h1>Venus</h1>
+    <div class="Venus">
+        <section>
+            <div class="MercuryContext">
+                <h1>Venus</h1>
+                <p>Similar in structure and size to Earth, Venus's thick atmosphere traps heat in a runaway greenhouse effect, making it the hottest planet in our solar system.</p>
+            </div>
+            <img src="../Images/Venus.png" alt="mercury" width="500px">
+        </section>
+        <footer>
+            <div class="indicators">
+                <div>
+                    <h3>Distance from Sun</h3>
+                    <p>66 787 344 MI KM</p>
+                </div>
+                <div>
+                    <h3>One way light time to the Sun</h3>
+                    <p>5.975459 mins</p>
+                </div>
+                <div>
+                    <h3>Length if year</h3>
+                    <p>225 Earth days</p>
+                </div>
+                <div>
+                    <h3>Planet type</h3>
+                    <p>Terrestrial</p>
+                </div>
+            </div>
+        </footer>    
+    </div>
 </body>
 </html>
