--- a/planet.html
+++ b/planet.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./planet.css">
-    <title>PlanetsWebSite</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./planet.css">
+  <title>PlanetsWebSite</title>
 </head>
+
 <body>
-    <section>
-        <img src="./PlanetsImage3.jpg" alt="planetImg" usemap="#planetmap">
-        <map name="planetmap">
-            <area shape="circle" coords="10,250,200" href="./Planets/Sun.html" alt="Sun">
-            <area shape="circle" coords="230,310,30" href="./Planets/Mercury.html" alt="Mercury">
-            <area shape="circle" coords="320,290,30" href="./Planets/Venus.html" alt="Venus">
-            <area shape="circle" coords="405,250,35" href="./Planets/Earth.html" alt="Earth">
-            <area shape="circle" coords="470,210,30" href="./Planets/Mars.html" alt="Mars">
-            <area shape="circle" coords="620,220,60" href="./Planets/Yupiter.html" alt="Jupiter">
-            <area shape="circle" coords="780,170,70" href="./Planets/Saturn.html" alt="Saturn">
-            <area shape="circle" coords="880,140,60" href="./Planets/Uranus.html" alt="Uranus">
-            <area shape="circle" coords="990,90,40" href="./Planets/Neptune.html" alt="Neptune">
-        </map>
-    </section>
+  <h1>Planets WebSite</h1>
+  <div class="Planets">
+    <div>
+      <a href="./Planets/Mercury.html">
+        <img src="./Images/Mercury.png" alt="mercury" >
+        <h3>Mercury</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Venus.html">
+        <img src="./Images/Venus.png" alt="venus" >
+        <h3>Venus</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Earth.html">
+        <img src="./Images/Earth.png" alt="earth" >
+        <h3>Earth</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Mars.html">
+        <img src="./Images/Mars.png" alt="mars"  >
+        <h3>Mars</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Yupiter.html">
+        <img src="./Images/Jupiter.png" alt="yupiter" >
+        <h3>Jupiter</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Saturn.html">
+        <img src="./Images/Saturn.png" alt="saturn" >
+        <h3>Saturn</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Uranus.html">
+        <img src="./Images/Uranus.png" alt="uranus" >
+        <h3>Uranus</h3>
+      </a>
+    </div>
+    <div>
+      <a href="./Planets/Neptune.html">
+        <img src="./Images/Neptune.png" alt="neptune" >
+        <h3>Neptune</h3>
+      </a>
+    </div>
+  </div>
 </body>
+
 </html>
